--- a/status.css
+++ b/status.css
@@ -1,9 +1,3 @@
-body {
-    background-color: #EEE2DF;
-    margin:0px; 
-    font-family: 'Archivo', sans-serif;
-}
-
 .nav-list {
     list-style-type: none;
     margin: 0;
@@ -31,31 +25,34 @@ body {
     background-color: #C89F9C;
 }
 
-.content {
-    text-align: center;
-    color: #B36A5E;
-    font-size: larger;
-    padding: 30px;
-    line-height: 150%;
+body {
+    background-color: #EEE2DF;
+    margin: 0px;
+    font-family: 'Archivo', sans-serif;
 }
 
 h1 {
     color: #B36A5E;
     font-weight: 500;
-    font-size:40px;
+    font-size: 40px;
     text-align: center;
     padding-bottom: 30px;
 }
 
-p {
-    float:center;
+
+h2 {
+    color: #B36A5E;
+    font-weight: 500;
+    font-size: 30px;
+    text-align: center;
+    padding-bottom: 30px;
 }
 
-.content img {
-    padding: 30px;
+h3 {
+    color: #B36A5E;
+    font-weight: 500;
+    font-size: 20px;
+    text-align: center;
+    padding-bottom: 30px;
 }
 
-hr {
-    border: 5px solid #C89F9C;
-    border-radius: 5px;
-  }
