--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
 body {
-    background-color: #EEE2DF;
-    margin:0px; 
-    font-family: 'Archivo', sans-serif;
+    line-height: 1.0;
+    min-height: var(--viewport-height);
+    min-width: 320px;
+    overflow-x: hidden;
+    word-wrap: break-word;
+    background: linear-gradient(-50deg, #A58CB3, #838BC2, #EAE7FA);
+    background-size: 200% 200%;
+    animation: gradient 25s ease infinite;
+}
+@keyframes gradient {
+    0% {
+        background-position: 100% 50%;
+    }
+    25% {
+        background-position: 0% 50%;
+    }
+    100% {
+        background-position: 100% 50%;
+    }
 }
 
 .nav-list {
@@ -9,7 +25,12 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #EED7C5;
+    background-color: #000000;
+    opacity: 50%;
+    border-radius: 40px;
+    -webkit-box-shadow:0px 0px 85px 10px rgb(0, 0, 0);
+    -moz-box-shadow: 0px 0px 85px 10px rgb(0, 0, 0);
+    box-shadow: 0px 0px 85px 10px rgb(0, 0, 0);
 }
 
 .nav-list li {
@@ -20,7 +41,7 @@ body {
 
 .nav-list li a {
     display: block;
-    color: #B36A5E;
+    color: #ffffff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -28,23 +49,30 @@ body {
 }
 
 .nav-list li a:hover {
-    background-color: #C89F9C;
+    background-color: #4e4cb7;
+    opacity: 80%;
+    transition: 0.3s;
 }
 
 .content {
     text-align: center;
-    color: #B36A5E;
+    color: #ffffff;
     font-size: larger;
     padding: 30px;
     line-height: 150%;
+    font-family: 'Archivo', sans-serif;
 }
 
 h1 {
-    color: #B36A5E;
+    color: #ffffff;
     font-weight: 500;
     font-size:40px;
     text-align: center;
     padding-bottom: 30px;
+    -webkit-text-shadow:0px 0px 85px 10px rgb(0, 0, 0);
+    -moz-box-text: 0px 0px 85px 10px rgb(0, 0, 0);
+    text-shadow: 0px 0px 85px 10px rgb(0, 0, 0);
+    font-family: 'Archivo', sans-serif;
 }
 
 p {
